Removed -getFollowedTimelineFor:* methods since they are no longer supported by Twitter. Removed the methods that used a NSDate for the "since" parameter: they are no longer supported by Twitter. Added a withMaximumID: method signature to the APIs that support the new "max_id" parameter. Updated search API to use include additional parameters. Updated search API to use the current terminology for trends. Fixed YAJL parsing "created_at" so that it handles the different date formats for the Search and REST APIs. Improved YAJL parsing when Twitter returns short (and invalid) JSON results. Simplified the -description method for MGTwitterHTTPURLConnection. Made many of the delegate methods optional—only -requestSucceeded and requestFailed:withError: are required. Fixed -_sendRequestWithMethod:path:queryParameters:body:requestType:responseType so it can handle requests for trends. Added #if DEBUG around NSLog() so a preprocessor definition can be used to control logging. Fixed a crash in the NSURLConnection authentication challenge if the username and/or password was nil. Major reorganization of source code so similar methods are grouped together (using the same grouping as Twitter's own documentation.) Added much more granularity to the MGTwitterRequestType enumeration: an application can now determine which method was used to generate a data object.
git-svn-id: http://svn.cocoasourcecode.com/MGTwitterEngine@38 fad7f400-0e54-0410-bf1d-e368f886e4d4

--- a/TODO
+++ b/TODO
@@ -1,6 +1,3 @@
-MGTwitterEngine To Do
-
-- Add JSON support
-- Add support for Search API
+MGTwitterEngine TODO
 
 - Write a Twitter client using this code. ;)
